--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Red+Rose:wght@700&display=swap&family=Poppins:ital,wght@1,100&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-canvas {
+#root {
   width: 100vw;
   height: 100vh;
 }
